Fixed problem with the word wrap in the tables.

--- a/htmlcss/style.css
+++ b/htmlcss/style.css
@@ -78,6 +78,7 @@ border-radius: 10px;
 -moz-border-radius: 10px;
 box-shadow: 0px 0px 10px #000000;
 -moz-box-shadow: 0px 0px 10px #000000;
+word-wrap: break-word;
 }
 
 #table1 h3{
